--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -16,7 +16,7 @@
         android:layout_marginBottom="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvSales"
+        android:id="@+id/salesList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
